package domain

type User struct {
	Id         int64
	Email      string
	Sub        string
	IdProvider string
}
